--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,15 @@
 [[constraint]]
   name = "github.com/gorilla/mux"
   version = "1.7.1"
+
+[[constraint]]
+  name = "github.com/gorilla/websocket"
+  version = "1.4.0"
+
+[[constraint]]
+  name = "github.com/pkg/errors"
+  version = "0.8.1"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.3.0"
