--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -43,3 +43,7 @@
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.3.0"
+
+[[constraint]]
+  name = "github.com/lib/pq"
+  version = "1.1.1"
