--- a/web/package.json
+++ b/web/package.json
@@ -13,13 +13,16 @@
     "@types/node": "12.0.0",
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
+    "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "rxjs": "^6.5.2",
-    "typescript": "3.4.5"
+    "typescript": "3.4.5",
+    "typestyle": "^2.0.2"
   },
   "devDependencies": {
+    "@types/qrcode.react": "^0.8.2",
     "rxjs-tslint": "^0.1.7",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
