--- a/js/package.json
+++ b/js/package.json
@@ -54,7 +54,8 @@
     "tslint-microsoft-contrib": "^6.1.1",
     "typescript": "^3.4.5",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "whatwg-fetch": "^3.0.0"
   },
   "engines": {
     "node": ">= 10.0.0"
