--- a/js/package.json
+++ b/js/package.json
@@ -34,6 +34,7 @@
     "lint:watch": "nodemon -e ts,tsx,js,json --watch src/ --exec 'yarn tsc && yarn lint'"
   },
   "dependencies": {
+    "bind-decorator": "^1.0.11",
     "bn.js": "^4.11.8",
     "lodash": "^4.17.11"
   },
