--- a/js/package.json
+++ b/js/package.json
@@ -29,9 +29,9 @@
     "build": "webpack --config webpack.config.js",
     "build-chrome": "webpack --config webpack.config.chrome.js",
     "build:dev": "export WALLETLINK_WEB_URL='http://localhost:3000'; yarn build && yarn build-chrome",
-    "build:dev:watch": "nodemon -e ts,tsx,js,json --watch src/ --watch chrome/ --exec 'yarn build:dev'",
+    "build:dev:watch": "nodemon -e ts,tsx,js,json,css --watch src/ --watch chrome/ --exec 'yarn build:dev'",
     "lint": "tslint -p . 'src/**/*.ts{,x}'",
-    "lint:watch": "nodemon -e ts,tsx,js,json --watch src/ --exec 'yarn tsc && yarn lint'"
+    "lint:watch": "nodemon -e ts,tsx,js,json,css --watch src/ --exec 'yarn tsc && yarn lint'"
   },
   "dependencies": {
     "bind-decorator": "^1.0.11",
