Update npm modules and fix linter errors

--- a/js/package.json
+++ b/js/package.json
@@ -40,22 +40,23 @@
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.5",
-    "@types/lodash": "^4.14.129",
-    "@types/node": "^12.0.2",
+    "@types/jest": "^24.0.13",
+    "@types/lodash": "^4.14.134",
+    "@types/node": "^12.0.8",
     "copy-webpack-plugin": "^5.0.3",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.9",
     "jest": "^24.8.0",
-    "nodemon": "^1.19.0",
-    "raw-loader": "^2.0.0",
+    "nodemon": "^1.19.1",
+    "raw-loader": "^3.0.0",
     "regenerator-runtime": "^0.13.2",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.0",
-    "tslint": "^5.16.0",
+    "ts-loader": "^6.0.2",
+    "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-microsoft-contrib": "^6.1.1",
-    "typescript": "^3.4.5",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "^3.5.1",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.4",
     "whatwg-fetch": "^3.0.0"
   },
   "engines": {
