--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint -p . 'src/**/*.ts{,x}'",
+    "lint:watch": "nodemon -e ts,tsx,js,json,css --watch src/ --exec 'yarn tsc && yarn lint'"
   },
   "dependencies": {
     "bind-decorator": "^1.0.11",
@@ -18,17 +20,17 @@
     "typestyle": "^2.0.2"
   },
   "devDependencies": {
-    "@types/jest": "24.0.12",
-    "@types/node": "12.0.0",
+    "@types/jest": "^24.0.13",
+    "@types/node": "^12.0.8",
     "@types/qrcode.react": "^0.8.2",
-    "@types/react": "16.8.17",
-    "@types/react-dom": "16.8.4",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "rxjs-tslint": "^0.1.7",
-    "tslint": "^5.16.0",
+    "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-microsoft-contrib": "^6.1.1",
+    "tslint-microsoft-contrib": "^6.2.0",
     "tslint-react": "^4.0.0",
-    "typescript": "3.4.5"
+    "typescript": "3.5.1"
   },
   "eslintConfig": {
     "extends": "react-app"
