--- a/js/package.json
+++ b/js/package.json
@@ -53,6 +53,7 @@
     "ts-loader": "^6.0.2",
     "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
+    "tslint-config-security": "^1.16.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.5.1",
     "webpack": "^4.33.0",
