--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "rxjs-tslint": "^0.1.7",
     "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
+    "tslint-config-security": "^1.16.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-react": "^4.0.0",
     "typescript": "3.5.1"
