--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "rxjs": "^6.5.2",
     "typestyle": "^2.0.2"
@@ -25,6 +27,8 @@
     "@types/qrcode.react": "^0.8.2",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "@types/react-router": "^5.0.1",
+    "@types/react-router-dom": "^4.3.3",
     "rxjs-tslint": "^0.1.7",
     "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
