--- a/js/package.json
+++ b/js/package.json
@@ -49,6 +49,7 @@
     "nodemon": "^1.19.1",
     "raw-loader": "^3.0.0",
     "regenerator-runtime": "^0.13.2",
+    "svg-url-loader": "^2.3.3",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.2",
     "tslint": "^5.17.0",
