--- a/js/package.json
+++ b/js/package.json
@@ -31,7 +31,7 @@
     "build-npm": "tsc -p ./tsconfig.build.json",
     "build:dev": "export WALLETLINK_WEB_URL='http://localhost:3000'; yarn build && yarn build-chrome",
     "build:dev:watch": "nodemon -e ts,tsx,js,json,css --watch src/ --watch chrome/ --exec 'yarn build:dev'",
-    "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json build/npm",
+    "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json README.md build/npm",
     "lint": "tslint -p . 'src/**/*.ts{,x}'",
     "lint:watch": "nodemon -e ts,tsx,js,json,css --watch src/ --exec 'yarn tsc && yarn lint'"
   },
