--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walletlink",
-  "version": "0.1.0",
+  "version": "0.0.3",
   "description": "WalletLink JavaScript SDK",
   "keywords": [
     "cipher",
@@ -37,29 +37,29 @@
   },
   "dependencies": {
     "bind-decorator": "^1.0.11",
-    "bn.js": "^4.11.8"
+    "bn.js": "^5.0.0"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.5",
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.8",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.8",
     "classlist-polyfill": "^1.2.0",
-    "copy-webpack-plugin": "^5.0.3",
+    "copy-webpack-plugin": "^5.0.4",
     "core-js": "^2.6.9",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
-    "raw-loader": "^3.0.0",
-    "regenerator-runtime": "^0.13.2",
-    "svg-url-loader": "^2.3.3",
+    "raw-loader": "^3.1.0",
+    "regenerator-runtime": "^0.13.3",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.2",
-    "tslint": "^5.17.0",
+    "ts-loader": "^6.0.4",
+    "tslib": "^1.10.0",
+    "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-security": "^1.16.0",
     "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "^3.5.1",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.4",
+    "typescript": "^3.5.3",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6",
     "whatwg-fetch": "^3.0.0"
   },
   "engines": {
