--- a/web/package.json
+++ b/web/package.json
@@ -20,24 +20,25 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "rxjs": "^6.5.2",
-    "typestyle": "^2.0.2"
+    "typestyle": "^2.0.4"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.8",
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.8",
+    "@types/classnames": "^2.2.9",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.8",
     "@types/qrcode.react": "^0.8.2",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-router": "^5.0.1",
-    "@types/react-router-dom": "^4.3.3",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-router": "^5.0.3",
+    "@types/react-router-dom": "^4.3.4",
     "rxjs-tslint": "^0.1.7",
-    "tslint": "^5.17.0",
+    "tslib": "^1.10.0",
+    "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-security": "^1.16.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-react": "^4.0.0",
-    "typescript": "3.5.1"
+    "typescript": "3.5.3"
   },
   "eslintConfig": {
     "extends": "react-app"
