--- a/js/package.json
+++ b/js/package.json
@@ -37,7 +37,9 @@
   },
   "dependencies": {
     "bind-decorator": "^1.0.11",
-    "bn.js": "^5.0.0"
+    "bn.js": "^5.0.0",
+    "eth-eip712-util": "^2.3.0",
+    "keccak": "^2.0.0"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.5",
