--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walletlink",
-  "version": "0.0.3",
+  "version": "0.0.6",
   "description": "WalletLink JavaScript SDK",
   "keywords": [
     "cipher",
@@ -31,7 +31,7 @@
     "build-npm": "tsc -p ./tsconfig.build.json",
     "build:dev": "export WALLETLINK_URL='http://localhost:3000'; yarn build && yarn build-chrome",
     "build:dev:watch": "nodemon -e ts,tsx,js,json,css --watch src/ --watch chrome/ --exec 'yarn build:dev'",
-    "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json README.md build/npm",
+    "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json ../README.md ../LICENSE build/npm",
     "lint": "tslint -p . 'src/**/*.ts{,x}'",
     "lint:watch": "nodemon -e ts,tsx,js,json,css --watch src/ --exec 'yarn tsc && yarn lint'"
   },
