Set up scss compilation

--- a/js/package.json
+++ b/js/package.json
@@ -26,11 +26,11 @@
     "tsc": "tsc --noEmit --pretty",
     "test": "jest",
     "test:watch": "jest --watch",
-    "build": "webpack --config webpack.config.js",
+    "build": "node compile-scss.js && webpack --config webpack.config.js",
     "build-chrome": "webpack --config webpack.config.chrome.js",
     "build-npm": "tsc -p ./tsconfig.build.json",
     "build:dev": "export WALLETLINK_URL='http://localhost:3000'; yarn build && yarn build-chrome",
-    "build:dev:watch": "nodemon -e ts,tsx,js,json,css --watch src/ --watch chrome/ --exec 'yarn build:dev'",
+    "build:dev:watch": "nodemon -e 'ts,tsx,js,json,css,scss' --ignore 'src/**/*.css.ts' --watch src/ --watch chrome/ --exec 'yarn build:dev'",
     "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json ../README.md ../LICENSE build/npm",
     "lint": "tslint -p . 'src/**/*.ts{,x}'",
     "lint:watch": "nodemon -e ts,tsx,js,json,css --watch src/ --exec 'yarn tsc && yarn lint'"
@@ -48,10 +48,12 @@
     "classlist-polyfill": "^1.2.0",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.6.4",
+    "glob": "^7.1.6",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "raw-loader": "^4.0.0",
     "regenerator-runtime": "^0.13.3",
+    "sass": "^1.25.0",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
     "tslib": "^1.10.0",
