--- a/js/package.json
+++ b/js/package.json
@@ -38,8 +38,10 @@
   "dependencies": {
     "bind-decorator": "^1.0.11",
     "bn.js": "^5.1.1",
+    "clsx": "^1.0.4",
     "eth-eip712-util": "^2.3.0",
-    "keccak": "^3.0.0"
+    "keccak": "^3.0.0",
+    "preact": "^10.2.1"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
