--- a/js/package.json
+++ b/js/package.json
@@ -41,12 +41,14 @@
     "clsx": "^1.0.4",
     "eth-eip712-util": "^2.3.0",
     "keccak": "^3.0.0",
-    "preact": "^10.2.1"
+    "preact": "^10.2.1",
+    "qrcode-svg": "^1.1.0"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
+    "@types/qrcode-svg": "^1.1.0",
     "classlist-polyfill": "^1.2.0",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.6.4",
