--- a/js/package.json
+++ b/js/package.json
@@ -42,7 +42,8 @@
     "eth-eip712-util": "^2.3.0",
     "keccak": "^3.0.0",
     "preact": "^10.2.1",
-    "qrcode-svg": "^1.1.0"
+    "qrcode-svg": "^1.1.0",
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
@@ -57,6 +58,7 @@
     "nodemon": "^2.0.2",
     "raw-loader": "^4.0.0",
     "regenerator-runtime": "^0.13.3",
+    "rxjs-tslint": "^0.1.7",
     "sass": "^1.25.0",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
