--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walletlink",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0",
   "description": "WalletLink JavaScript SDK",
   "keywords": [
     "cipher",
