--- a/js/package.json
+++ b/js/package.json
@@ -32,7 +32,7 @@
     "build-npm": "tsc -p ./tsconfig.build.json",
     "build:dev": "export WALLETLINK_URL='http://localhost:3000'; yarn build && yarn build-chrome",
     "build:dev:watch": "nodemon -e 'ts,tsx,js,json,css,scss,svg' --ignore 'src/**/*-css.ts' --ignore 'src/**/*-svg.ts' --watch src/ --watch chrome/ --exec 'yarn build:dev'",
-    "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json ../README.md ../LICENSE build/npm && sed -i '' 's|  \"private\": true,||g' build/npm/package.json",
+    "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json ../README.md ../LICENSE build/npm && cp -a src/vendor-js build/npm/dist && sed -i '' 's|  \"private\": true,||g' build/npm/package.json",
     "lint": "tslint -p . 'src/**/*.ts{,x}'",
     "lint:watch": "nodemon -e ts,tsx,js,json,css,scss,svg --watch src/ --exec 'yarn tsc && yarn lint'"
   },
@@ -40,18 +40,13 @@
     "bind-decorator": "^1.0.11",
     "bn.js": "^5.1.1",
     "clsx": "^1.1.0",
-    "eth-eip712-util": "^2.3.1",
-    "keccak": "^3.0.0",
-    "preact": "^10.3.2",
-    "qrcode-svg": "^1.1.0",
+    "preact": "^10.3.3",
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
     "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.6",
-    "@types/qrcode-svg": "^1.1.0",
-    "classlist-polyfill": "^1.2.0",
+    "@types/node": "^13.7.7",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.6.4",
     "glob": "^7.1.6",
@@ -60,17 +55,17 @@
     "raw-loader": "^4.0.0",
     "regenerator-runtime": "^0.13.3",
     "rxjs-tslint": "^0.1.7",
-    "sass": "^1.26.1",
+    "sass": "^1.26.2",
     "svgo": "^1.3.2",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
-    "tslib": "^1.11.0",
+    "tslib": "^1.11.1",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-security": "^1.16.0",
     "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "^3.8.2",
-    "webpack": "^4.41.6",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "whatwg-fetch": "^3.0.0"
   },
