--- a/js/package.json
+++ b/js/package.json
@@ -40,27 +40,27 @@
     "bind-decorator": "^1.0.11",
     "bn.js": "^5.1.1",
     "clsx": "^1.1.0",
-    "preact": "^10.3.3",
+    "preact": "^10.3.4",
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.7",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.1",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.6.4",
     "glob": "^7.1.6",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "raw-loader": "^4.0.0",
-    "regenerator-runtime": "^0.13.3",
+    "regenerator-runtime": "^0.13.5",
     "rxjs-tslint": "^0.1.7",
-    "sass": "^1.26.2",
+    "sass": "^1.26.3",
     "svgo": "^1.3.2",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "tslib": "^1.11.1",
-    "tslint": "^6.0.0",
+    "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-security": "^1.16.0",
     "tslint-microsoft-contrib": "^6.2.0",
@@ -68,6 +68,9 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "whatwg-fetch": "^3.0.0"
+  },
+  "resolutions": {
+    "minimist": "^1.2.5"
   },
   "engines": {
     "node": ">= 10.0.0"
