--- a/web/package.json
+++ b/web/package.json
@@ -23,9 +23,9 @@
     "typestyle": "^2.0.4"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.9",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.7",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.1",
     "@types/qrcode.react": "^1.0.0",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
@@ -33,12 +33,15 @@
     "@types/react-router-dom": "^5.1.3",
     "rxjs-tslint": "^0.1.7",
     "tslib": "^1.10.1",
-    "tslint": "^6.0.0",
+    "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-security": "^1.16.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-react": "^4.2.0",
     "typescript": "3.8.3"
+  },
+  "resolutions": {
+    "minimist": "^1.2.5"
   },
   "eslintConfig": {
     "extends": "react-app"
