--- a/js/package.json
+++ b/js/package.json
@@ -32,7 +32,7 @@
     "build-npm": "tsc -p ./tsconfig.build.json",
     "build:dev": "export WALLETLINK_URL='http://localhost:3000'; yarn build && yarn build-chrome",
     "build:dev:watch": "nodemon -e 'ts,tsx,js,json,css,scss,svg' --ignore 'src/**/*-css.ts' --ignore 'src/**/*-svg.ts' --watch src/ --watch chrome/ --exec 'yarn build:dev'",
-    "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json ../README.md ../LICENSE build/npm && cp -a src/vendor-js build/npm/dist && sed -i '' 's|  \"private\": true,||g' build/npm/package.json",
+    "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json ../README.md ../LICENSE build/npm && cp -a src/vendor-js build/npm/dist && sed -i.bak 's|  \"private\": true,||g' build/npm/package.json && rm -f build/npm/package.json.bak",
     "lint": "tslint -p . 'src/**/*.ts{,x}'",
     "lint:watch": "nodemon -e ts,tsx,js,json,css,scss,svg --watch src/ --exec 'yarn tsc && yarn lint'"
   },
@@ -45,26 +45,25 @@
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.1",
-    "copy-webpack-plugin": "^5.1.1",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "copy-webpack-plugin": "^6.0.2",
     "core-js": "^3.6.4",
-    "glob": "^7.1.6",
-    "jest": "^25.1.0",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.2",
     "raw-loader": "^4.0.0",
     "regenerator-runtime": "^0.13.5",
     "rxjs-tslint": "^0.1.7",
     "sass": "^1.26.3",
     "svgo": "^1.3.2",
-    "ts-jest": "^25.2.1",
-    "ts-loader": "^6.2.1",
-    "tslib": "^1.11.1",
+    "ts-jest": "^26.1.0",
+    "ts-loader": "^7.0.5",
+    "tslib": "^2.0.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-security": "^1.16.0",
     "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "^3.8.3",
+    "typescript": "^3.9.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "whatwg-fetch": "^3.0.0"
