--- a/web/package.json
+++ b/web/package.json
@@ -13,35 +13,38 @@
   "dependencies": {
     "bind-decorator": "^1.0.11",
     "classnames": "^2.2.6",
-    "qrcode.react": "^1.0.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.9.0",
+    "qrcode.react": "^1.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "rxjs": "^6.6.0",
+    "react-scripts": "4.0.1",
+    "rxjs": "^6.6.3",
     "typestyle": "^2.0.4"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^26.0.5",
-    "@types/node": "^14.0.23",
+    "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.20",
     "@types/qrcode.react": "^1.0.0",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.9",
+    "@types/react-router-dom": "^5.1.7",
     "rxjs-tslint": "^0.1.7",
-    "tslib": "^2.0.0",
-    "tslint": "^6.1.0",
+    "tslib": "^2.0.3",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-security": "^1.16.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-react": "^5.0.0",
-    "typescript": "3.9.7"
+    "typescript": "4.1.3"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "@typescript-eslint/no-redeclare": "off"
+    }
   },
   "browserslist": {
     "production": [
