--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -6,8 +6,12 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "jsx": "react-jsx",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -21,5 +25,7 @@
     "strict": true,
     "target": "es5"
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
