--- a/js/package.json
+++ b/js/package.json
@@ -41,7 +41,9 @@
     "bn.js": "^5.1.1",
     "clsx": "^1.1.0",
     "preact": "^10.5.9",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "eth-rpc-errors": "4.0.2",
+    "@metamask/safe-event-emitter": "2.0.0"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
