Allow subscribing to eth_subscribe events

--- a/js/package.json
+++ b/js/package.json
@@ -43,7 +43,9 @@
     "preact": "^10.5.9",
     "rxjs": "^6.6.3",
     "eth-rpc-errors": "4.0.2",
-    "@metamask/safe-event-emitter": "2.0.0"
+    "@metamask/safe-event-emitter": "2.0.0",
+    "eth-json-rpc-filters": "4.2.2",
+    "eth-block-tracker": "4.4.3"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
