--- a/js/package.json
+++ b/js/package.json
@@ -45,7 +45,8 @@
     "eth-rpc-errors": "4.0.2",
     "@metamask/safe-event-emitter": "2.0.0",
     "eth-json-rpc-filters": "4.2.2",
-    "eth-block-tracker": "4.4.3"
+    "eth-block-tracker": "4.4.3",
+    "json-rpc-engine": "6.1.0"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
