--- a/js/package.json
+++ b/js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "walletlink",
   "version": "2.2.8",
-  "description": "WalletLink JavaScript SDK Internal",
+  "description": "WalletLink JavaScript SDK",
   "keywords": [
     "cipher",
     "cipherbrowser",
@@ -17,8 +17,8 @@
     "walletlink",
     "web3"
   ],
-  "main": "build/npm/dist/index.js",
-  "types": "build/npm/dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/walletlink/walletlink.git",
   "author": "Coinbase, Inc.",
   "license": "Apache-2.0",
