remove tslint, add eslint-typescript

--- a/js/package.json
+++ b/js/package.json
@@ -31,7 +31,7 @@
     "build:dev": "export WALLETLINK_URL='http://localhost:3000'; yarn build && yarn build-chrome",
     "build:dev:watch": "nodemon -e 'ts,tsx,js,json,css,scss,svg' --ignore 'src/**/*-css.ts' --ignore 'src/**/*-svg.ts' --watch src/ --watch chrome/ --exec 'yarn build:dev'",
     "build:prod": "yarn build && yarn build-chrome && yarn build-npm && cp ./package.json ../README.md ../LICENSE build/npm && cp -a src/vendor-js build/npm/dist && sed -i.bak 's|  \"private\": true,||g' build/npm/package.json && rm -f build/npm/package.json.bak",
-    "lint": "tslint -p . 'src/**/*.ts{,x}'",
+    "lint": "eslint 'src/**/*.ts{,x}'",
     "lint:watch": "nodemon -e ts,tsx,js,json,css,scss,svg --watch src/ --exec 'yarn tsc && yarn lint'"
   },
   "dependencies": {
@@ -52,27 +52,32 @@
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
     "@types/node": "^14.14.20",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "browserify": "17.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "core-js": "^3.8.2",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-preact": "^0.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "jasmine": "3.8.0",
     "karma": "^6.3.2",
     "karma-browserify": "8.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
     "nodemon": "^2.0.6",
+    "prettier": "^2.5.1",
     "raw-loader": "^4.0.2",
     "regenerator-runtime": "^0.13.7",
-    "rxjs-tslint": "^0.1.7",
     "sass": "^1.32.0",
     "svgo": "^2.8.0",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.13",
     "tslib": "^2.0.3",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-config-security": "^1.16.0",
-    "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^4.1.3",
     "watchify": "4.0.0",
     "webpack": "^5.49.0",
