--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
-.vscode
 
 npm-debug.log*
 yarn-debug.log*
@@ -24,3 +23,6 @@ yarn-error.log*
 
 # eslint cache
 .eslintcache
+
+.vscode
+.idea
