--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "walletlink",
   "version": "2.4.7",
-  "description": "WalletLink JavaScript SDK",
+  "description": "Coinbase Wallet JavaScript SDK",
   "keywords": [
     "cipher",
     "cipherbrowser",
@@ -19,7 +19,7 @@
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": "https://github.com/walletlink/walletlink.git",
+  "repository": "https://github.com/walletlink/coinbase-wallet-sdk.git",
   "author": "Coinbase, Inc.",
   "license": "Apache-2.0",
   "scripts": {
