--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "node compile-assets.js && webpack --config webpack.config.js",
     "build-chrome": "webpack --config webpack.config.chrome.js",
     "build-npm": "tsc -p ./tsconfig.build.json",
-    "build:dev": "export WALLETLINK_URL='http://localhost:3000'; yarn build && yarn build-chrome",
+    "build:dev": "export API_URL='http://localhost:3000'; yarn build && yarn build-chrome",
     "build:dev:watch": "nodemon -e 'ts,tsx,js,json,css,scss,svg' --ignore 'src/**/*-css.ts' --ignore 'src/**/*-svg.ts' --watch src/ --watch chrome/ --exec 'yarn build:dev'",
     "build:prod": "yarn prebuild && yarn build && yarn build-chrome && yarn build-npm && cp ./package.json ./README.md ./LICENSE build/npm && cp -a src/vendor-js build/npm/dist && sed -i.bak 's|  \"private\": true,||g' build/npm/package.json && rm -f build/npm/package.json.bak",
     "lint": "eslint ./src --ext .ts,.tsx",
