--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "@types/bn.js": "^4.11.6",
     "@types/node": "^14.14.20",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
@@ -81,7 +82,7 @@
     "typescript": "^4.1.3",
     "watchify": "4.0.0",
     "webpack": "^5.49.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.9.2",
     "whatwg-fetch": "^3.5.0"
   },
   "engines": {
