--- a/package.json
+++ b/package.json
@@ -66,11 +66,13 @@
     "eslint-plugin-preact": "^0.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "7.0.4",
     "jasmine": "3.8.0",
     "karma": "^6.3.15",
     "karma-browserify": "8.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
+    "lint-staged": "12.3.7",
     "nodemon": "^2.0.6",
     "prettier": "^2.5.1",
     "raw-loader": "^4.0.2",
@@ -103,6 +105,19 @@
       "ts",
       "js",
       "json"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": [
+        "lint-staged"
+      ]
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --cache --fix", 
+      "prettier --write"
     ]
   }
 }
