--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
+    "*.{ts,tsx,js,jsx}": [
       "eslint --cache --fix", 
       "prettier --write"
     ]
