--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,26 @@
-name: Run Linter
+name: CI
 
 on:
   push:
+    branches-ignore:
+      - 'master'
 
 jobs:
-  lint:
+  pretest:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Checkout node action
-        uses: actions/setup-node@v1
+      - name: 'nvm install lts/* && npm install'
+        uses: ljharb/actions/node/install@main
         with:
-          node-version: 16
+          node-version: 'lts/*'
 
       - name: Install NPM dependencies
         run: yarn install
 
-      - name: Run linter
-        run: yarn lint
+      - name: Run linter & typecheck
+        run: yarn pretest
 
