--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches-ignore:
-      - 'master'
+      - "master"
 
 jobs:
   pretest:
@@ -13,14 +13,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: node_modules cache
+        uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+
       - name: Checkout node action
         uses: actions/setup-node@v2
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: Install NPM dependencies
         run: yarn install
 
       - name: Run linter & typecheck
         run: yarn pretest
-
