--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "author": "Coinbase, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "typecheck": "tsc --noEmit --pretty",
     "test": "yarn build-npm && karma start",
     "prebuild": "node -p \"'export const LIB_VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
     "build": "node compile-assets.js && webpack --config webpack.config.js",
@@ -31,9 +30,10 @@
     "build:dev": "export LINK_API_URL='http://localhost:3000'; yarn build",
     "build:dev:watch": "nodemon -e 'ts,tsx,js,json,css,scss,svg' --ignore 'src/**/*-css.ts' --ignore 'src/**/*-svg.ts' --watch src/ --exec 'yarn build:dev'",
     "build:prod": "yarn prebuild && yarn build && yarn build-npm && cp ./package.json ./README.md ./LICENSE build/npm && cp -a src/vendor-js build/npm/dist && sed -i.bak 's|  \"private\": true,||g' build/npm/package.json && rm -f build/npm/package.json.bak",
-    "lint": "eslint ./src --ext .ts,.tsx",
-    "lint:watch": "nodemon -e ts,tsx,js,json,css,scss,svg --watch src/ --exec 'yarn tsc && yarn lint'",
-    "pretest": "yarn lint && yarn typecheck"
+    "lint:types": "tsc --noEmit",
+    "lint:prettier": "prettier --check \"{src,__tests__}/**/*.(js|ts|tsx)\"",
+    "lint:eslint": "eslint ./src --ext .ts,.tsx",
+    "pretest": "yarn lint:types && yarn lint:types && yarn lint:prettier"
   },
   "private": true,
   "dependencies": {
