--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           node-version-file: ".nvmrc"
 
       - name: Install NPM dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Run linter & typecheck
         run: yarn pretest
