--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ on:
       - "master"
 
 jobs:
-  pretest:
+  lint-check:
+    name: Check for ESLint, Formatting, and Types
     runs-on: ubuntu-latest
 
     steps:
@@ -27,5 +28,11 @@ jobs:
       - name: Install NPM dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Run linter & typecheck
-        run: yarn pretest
+      - name: Check ESLint
+        run: yarn lint:eslint
+
+      - name: Check Types
+        run: yarn lint:types
+
+      - name: Check prettier formatting
+        run: yarn lint:prettier
