--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint:types": "tsc --noEmit",
     "lint:prettier": "prettier --check \"{src,__tests__}/**/*.(js|ts|tsx)\"",
     "lint:eslint": "eslint ./src --ext .ts,.tsx",
-    "pretest": "yarn lint:types && yarn lint:types && yarn lint:prettier"
+    "pretest": "yarn lint:eslint && yarn lint:types && yarn lint:prettier"
   },
   "private": true,
   "dependencies": {
