--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: node_modules cache
+      - name: Cached node_modules
         uses: actions/cache@v2
         with:
           path: '**/node_modules'
@@ -27,6 +27,9 @@ jobs:
 
       - name: Install NPM dependencies
         run: yarn install --frozen-lockfile
+      
+      - name: Runs compile asset script
+        run: ./compile-assets.js
 
       - name: Check ESLint
         run: yarn lint:eslint
