--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   lint-check:
-    name: Check for ESLint and Types
+    name: Check for ESLint, Formatting, and Types
     runs-on: ubuntu-latest
 
     steps:
@@ -19,12 +19,15 @@ jobs:
 
       - name: Install NPM dependencies
         run: yarn install
-      
-      - name: Runs compile asset script
-        run: node ./compile-assets.js
 
       - name: Check ESLint
         run: yarn lint:eslint
+
+      - name: Check prettier formatting
+        run: yarn lint:prettier
+      
+      - name: Runs compile asset script
+        run: node ./compile-assets.js
 
       - name: Check Types
         run: yarn lint:types
