yarn install step

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version-file: ".nvmrc"
+          cache: 'yarn'
+
+      - name: Install
+        run: yarn install --frozen-lockfile
 
       - name: Set registry url
         uses: actions/setup-node@v2
