--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -2,8 +2,8 @@ name: Tag release branch
 
 on:
   push:
-    branches:
-      - master
+    # branches:
+    #   - master
 
 jobs:
   tag_merged:
@@ -12,6 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check Tag
+        id: check-tag
+        run: |
+          if [[ ${{ github.event.head_commit.message }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo ::set-output name=match::true
+          fi
+      - name: Build
+        if: steps.check-tag.outputs.match == 'true'
+        run: |
+          echo "Tag is a match"
       - name: Tagging ${{ github.event.head_commit.message }}"
         uses: EndBug/add-and-commit@v9
         with:
