[chore] Workflow to create release PR & version tag (#446)
* testing

* tag flow

* tag by commit

* v0.0.0

* v0.0.1

* v0.0.2

* minor updates

* Only run on master"

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -42,8 +42,11 @@ jobs:
       - name: Update version.ts file
         run: yarn prebuild
 
-      - name: Commit and tag updated version
-        uses: EndBug/add-and-commit@v9
+      - name: Commit and branch updated version
+        uses: peter-evans/create-pull-request@v4
         with:
-          message: "v${{ env.PACKAGE_VERSION }}"
-          tag: "v${{ env.PACKAGE_VERSION }}"
+          title: "v${{ env.PACKAGE_VERSION }}"
+          body: "Automated workflow: version update"
+          branch: release-v${{ env.PACKAGE_VERSION }}
+          delete-branch: true
+          labels: version-update
