[chore] Setup unit testing (#476)
* jest setup

* [WIP] Jest config

* jest config updates

* Some setup

* cleanup

* Update tsconfig.build.json

* Update package.json

* Colocate

* Cleanup

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,5 +7,6 @@
     "outDir": "./build/npm/dist",
     "target": "es2017"
   },
-  "include": ["src", "src/@types"]
+  "include": ["src", "src/@types"],
+  "exclude": ["**/*.test.*", "__tests__"]
 }
