--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es2016"
+    "target": "es2016",
+    "types": ["node", "jest"]
   },
-  "include": ["src", "src/@types", "__tests__"]
+  "include": ["src", "src/@types", "__tests__", "**/*.test.*"]
 }
