--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "author": "Coinbase, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "test": "yarn build-npm && karma start",
+    "test:unit": "jest",
+    "test:unit:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
+    "test:karma": "yarn build-npm && karma start",
     "prebuild": "node -p \"'export const LIB_VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
     "build": "node compile-assets.js && webpack --config webpack.config.js",
     "build-npm": "tsc -p ./tsconfig.build.json",
@@ -34,8 +36,7 @@
     "lint:prettier": "prettier --check \"{src,__tests__}/**/*.(js|ts|tsx)\"",
     "lint:eslint": "eslint ./src --ext .ts,.tsx",
     "fix:eslint": "yarn lint:eslint --fix",
-    "fix:prettier": "prettier . --write",
-    "pretest": "yarn lint:eslint && yarn lint:types && yarn lint:prettier"
+    "fix:prettier": "prettier . --write"
   },
   "private": true,
   "dependencies": {
@@ -55,13 +56,17 @@
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/bn.js": "^4.11.6",
+    "@types/jest": "^27.4.1",
     "@types/node": "^14.14.20",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "babel-jest": "^27.5.1",
     "browserify": "17.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "core-js": "^3.8.2",
@@ -72,6 +77,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jasmine": "3.8.0",
+    "jest": "^27.5.1",
+    "jest-chrome": "^0.7.2",
     "karma": "^6.3.15",
     "karma-browserify": "8.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -80,34 +87,19 @@
     "prettier": "^2.5.1",
     "raw-loader": "^4.0.2",
     "regenerator-runtime": "^0.13.7",
-    "sass": "^1.32.0",
+    "sass": "^1.50.0",
     "svgo": "^2.8.0",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.13",
+    "ts-node": "^10.7.0",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3",
     "watchify": "4.0.0",
-    "webpack": "^5.49.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "whatwg-fetch": "^3.5.0"
   },
   "engines": {
     "node": ">= 10.0.0"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "<rootDir>/dist/",
-      "<rootDir>/node_modules/"
-    ],
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "json"
-    ]
   }
 }
