--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
+        node-version: ${{ matrix.node-version }}
         cache: 'yarn'
 
     - name: Install NPM dependencies
