--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:karma": "yarn build-npm && karma start",
     "prebuild": "node -p \"'export const LIB_VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
     "compile": "node compile-assets.js",
-    "copy": "yarn babel src --out-dir build/npm/dist --copy-files",
+    "copy": "yarn babel src --out-dir build/npm/dist --extensions \".ts,.tsx\" --ignore \"src/vendor-js/**\"",
     "clean": "rm -rf build",
     "build": "webpack --config webpack.config.js",
     "build-npm": "tsc -p ./tsconfig.build.json",
